--- a/examples/basic/evm-example/src/App.css
+++ b/examples/basic/evm-example/src/App.css
@@ -20,7 +20,15 @@ button:hover {
   cursor: pointer;
 }
 
-.container,
+.container {
+  display: flex;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
 .swap-details {
   display: flex;
   flex-direction: column;
@@ -33,11 +41,6 @@ button:hover {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-}
-
-.container {
-  display: flex;
-  height: 100vh;
 }
 
 .main-content {
